Fix Bug 349683 - Crash (Assert) when using autocompletion for mail receiver

For the moment I don't understand why job emit twice result() signal

BUG: 349683